# snake-arena-live

./: AGENTS.md  README.md  index.html  openapi.yaml  package-lock.json  package.json  tailwind.config.ts
backend/: Makefile  README.md  main.py  pyproject.toml
backend/app/: __init__.py  auth.py  config.py  database.py  models.py
backend/app/routers/: auth.py  leaderboard.py  players.py
backend/tests/: conftest.py  test_auth.py  test_leaderboard.py  test_players.py
frontend/: index.html  package-lock.json  package.json
frontend/src/components/: AuthForms.test.tsx  GameBoard.tsx  LeaderboardTable.test.tsx  LeaderboardTable.tsx  ModeSelector.test.tsx  ModeSelector.tsx  Navbar.tsx  SpectatorView.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: gameLogic.test.ts  gameLogic.ts
frontend/src/pages/: Auth.tsx  Index.tsx  NotFound.tsx  Watch.tsx
frontend/src/services/: mockApi.test.ts
src/: App.tsx  index.css
src/components/: AuthForms.test.tsx  AuthForms.tsx  GameBoard.test.tsx  LeaderboardTable.test.tsx
src/pages/: Leaderboard.tsx
src/services/: mockApi.ts
src/test/: setup.ts
